--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testCompile "org.mockito:mockito-core:3.4.0"
     compileOnly 'org.projectlombok:lombok:1.18.12'
     runtime group: 'com.h2database', name: 'h2', version: '1.3.148'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.73'
 }
 
 group = 'com.thoughtworks'
