--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'net.ltgt.apt' version '0.20'
 }
+
+apply plugin: 'net.ltgt.apt-idea'
 
 repositories {
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -31,6 +34,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
     runtime group: 'com.h2database', name: 'h2', version: '1.3.148'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.73'
+    compile 'org.mapstruct:mapstruct:1.3.1.Final'
+    compile 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 }
 
 group = 'com.thoughtworks'
